tests/sksl/errors/Ossfuzz44565.glsl
### Compilation failed:

error: 2: expected expression, but found 'in'
in blend_hard_light(nt  blend_dst(s=d&6o&&0-4=t[e(p¸¸<=t[t[e(p = all(not(bool3(1 ru¸¸¸ha{{{{{{{{{{{{{{...
^^
1 error
